white space on bottom fixed

--- a/src/component/LandingPageV2/style.css
+++ b/src/component/LandingPageV2/style.css
@@ -1,3 +1,6 @@
+body {
+    height: 100px !important
+}
 .nospacing {
     margin:0%;
     padding: 0%;
